# shazamm

./: README.md  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: d1a650eefbda_initial_migration.py
documentation/: explanation.md
misc/: ingest_songs.py
src/: database.py  main.py  server.py
src/api/: routes.py
src/models/: model.py  utils.py
src/services/: database_service.py  fingerprint_service.py  recognition_service.py
website/: app.js  index.html  style.css
